--- a/second-room.html
+++ b/second-room.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum Interactive webpage</title>
+    <title>Museum Interactive Webpage - Room 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="second-room">
     <div class="overlay" id="overlay"></div>
+
+    <div class="door-area-room2" onclick="triggerTransitionBack()"></div>
+
+    <div class="canvas" id="canvas3" onclick="showCanvasModal(3)"></div>
+    <div class="canvas" id="canvas4" onclick="showCanvasModal(4)"></div>
+
+    
+    <div class="modal" id="canvasModal3">
+        <h2>Story 9:</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+
+    <div class="modal" id="canvasModal4">
+        <h2>Story 10:</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+
+    <script src="scripts/script1.js" defer></script>
 </body>
 </html>
